<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#FFF">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/actionBarSize"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="30dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:textColor="#F13F55"
                    android:textColorHint="@color/colorPrimary"
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="textCapWords"
                    android:hint="@string/full_name" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_firmname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:textColor="#F13F55"
                    android:inputType="textCapWords"
                    android:textColorHint="@color/colorPrimary"
                    android:id="@+id/firmname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/firmName" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_gstno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:textColor="#F13F55"
                    android:textColorHint="@color/colorPrimary"
                    android:id="@+id/gstno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/gstIn"
                    android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_aadhar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText

                    android:textColor="#F13F55"
                    android:textColorHint="@color/colorPrimary"
                    android:id="@+id/aadhar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/aadhar"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText

                    android:textColor="#F13F55"
                    android:textColorHint="@color/colorPrimary"
                    android:id="@+id/contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/phone"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_establishFrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText

                    android:textColor="#F13F55"
                    android:textColorHint="@color/colorPrimary"
                    android:id="@+id/establishFrom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/established"
                    android:inputType="date"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_subscription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText

                    android:textColor="#F13F55"
                    android:textColorHint="@color/colorPrimary"
                    android:id="@+id/subscription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/subscription"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText

                    android:textColor="#F13F55"
                    android:textColorHint="@color/colorPrimary"
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText

                    android:textColor="#F13F55"
                    android:textColorHint="@color/colorPrimary"
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signUp"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/roundbutt"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signUp"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/roundbutt"/>

        </LinearLayout>

    </ScrollView>
</android.support.design.widget.CoordinatorLayout>