<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_weight="2"
    android:weightSum="2">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:weightSum="4">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="23dp"
            android:text="@string/ownerHeading"
            android:textStyle="italic|bold"
            android:textColor="#f13f55"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <ImageView
                android:id="@+id/img1"
                android:layout_width="match_parent"
                android:layout_height="222dp"
                android:layout_gravity="center"
                android:src="@drawable/owner"
                android:backgroundTint="@android:color/black"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:weightSum="2">

                <TextView
                    android:id="@+id/img2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:text="@string/owner"
                    android:textColor="#212121"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:textStyle="italic|bold"/>

                <Button
                    android:id="@+id/button1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="100dp"
                    android:textColor="#ffffff"
                    android:background="@drawable/roundbutt"
                    android:text="@string/getStarted" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:weightSum="4">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:text="@string/customerHeading"
                android:textStyle="bold|italic"
                android:textColor="#f13f55"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <ImageView

                    android:layout_width="match_parent"
                    android:layout_height="222dp"
                    android:layout_gravity="center"
                    android:src="@drawable/customer"
                    android:backgroundTint="@android:color/black"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/img3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingTop="35dp"
                        android:text="@string/customer"
                        android:textStyle="italic|bold"
                        android:textSize="16sp"
                        android:paddingRight="8dp"
                        android:textColor="#212121"
                        android:textAlignment="center"
                        android:layout_weight="1" />
                    <Button
                        android:id="@+id/button2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:layout_marginTop="50dp"
                        android:layout_marginRight="5dp"
                        android:textColor="#ffffff"
                        android:background="@drawable/roundbutt"
                        android:text="@string/getStarted" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>